// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseModuleSidebar calls handleChangeValue when clicking the Overview button 1`] = `
<DocumentFragment>
  <div
    class="Sidebar_container"
  >
    <h4
      class="Sidebar_courseName"
    />
    <div
      class="dropdown"
    >
      <button
        class="ArrowRightIcon"
        type="button"
      >
        <a
          class="btnClickedCName"
          href="/userCourse/modulOverview/undefined"
        >
          Overview
        </a>
        <img
          alt="chevron"
          class="chevronIsOpen"
          src="ArrowRight.svg"
        />
      </button>
    </div>
    <div
      class="SidebarOverview_button"
    >
      Additional Materials
    </div>
    <div
      class="SidebarOverview_button"
    >
      Grade
    </div>
    <div
      class="SidebarOverview_button"
    >
      <a
        class="btnNotClickedCName"
        href="/userCourse/modulOverview/undefined/discussionForum"
      >
        Discussion Forum
      </a>
    </div>
    <div
      class="SidebarOverview_button"
    >
      FAQ
    </div>
  </div>
</DocumentFragment>
`;

exports[`CourseModuleSidebar renders the component 1`] = `
<DocumentFragment>
  <div
    class="Sidebar_container"
  >
    <h4
      class="Sidebar_courseName"
    />
    <div
      class="dropdown"
    >
      <button
        class="ArrowRightIcon"
        type="button"
      >
        <a
          class="btnClickedCName"
          href="/userCourse/modulOverview/undefined"
        >
          Overview
        </a>
        <img
          alt="chevron"
          class="chevronIsOpen"
          src="ArrowRight.svg"
        />
      </button>
    </div>
    <div
      class="SidebarOverview_button"
    >
      Additional Materials
    </div>
    <div
      class="SidebarOverview_button"
    >
      Grade
    </div>
    <div
      class="SidebarOverview_button"
    >
      <a
        class="btnNotClickedCName"
        href="/userCourse/modulOverview/undefined/discussionForum"
      >
        Discussion Forum
      </a>
    </div>
    <div
      class="SidebarOverview_button"
    >
      FAQ
    </div>
  </div>
</DocumentFragment>
`;

exports[`CourseModuleSidebar toggles the module list on click 1`] = `
<DocumentFragment>
  <div
    class="Sidebar_container"
  >
    <h4
      class="Sidebar_courseName"
    />
    <div
      class="dropdown"
    >
      <button
        class="ArrowRightIcon"
        type="button"
      >
        <a
          class="btnClickedCName"
          href="/userCourse/modulOverview/undefined"
        >
          Overview
        </a>
        <img
          alt="chevron"
          class="chevronIsClosed"
          src="ArrowRight.svg"
        />
      </button>
    </div>
    <div
      class="SidebarOverview_button"
    >
      Additional Materials
    </div>
    <div
      class="SidebarOverview_button"
    >
      Grade
    </div>
    <div
      class="SidebarOverview_button"
    >
      <a
        class="btnNotClickedCName"
        href="/userCourse/modulOverview/undefined/discussionForum"
      >
        Discussion Forum
      </a>
    </div>
    <div
      class="SidebarOverview_button"
    >
      FAQ
    </div>
  </div>
</DocumentFragment>
`;

exports[`CourseModuleSidebar toggles the module list on click 2`] = `
<DocumentFragment>
  <div
    class="Sidebar_container"
  >
    <h4
      class="Sidebar_courseName"
    />
    <div
      class="dropdown"
    >
      <button
        class="ArrowRightIcon"
        type="button"
      >
        <a
          class="btnClickedCName"
          href="/userCourse/modulOverview/undefined"
        >
          Overview
        </a>
        <img
          alt="chevron"
          class="chevronIsOpen"
          src="ArrowRight.svg"
        />
      </button>
    </div>
    <div
      class="SidebarOverview_button"
    >
      Additional Materials
    </div>
    <div
      class="SidebarOverview_button"
    >
      Grade
    </div>
    <div
      class="SidebarOverview_button"
    >
      <a
        class="btnNotClickedCName"
        href="/userCourse/modulOverview/undefined/discussionForum"
      >
        Discussion Forum
      </a>
    </div>
    <div
      class="SidebarOverview_button"
    >
      FAQ
    </div>
  </div>
</DocumentFragment>
`;
